<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/faculty_admin_nav_pending_students"
        android:icon="@drawable/baseline_manage_accounts_24"
        android:title="@string/pending_users" />

    <item
        android:id="@+id/faculty_admin_nav_majors"
        android:icon="@drawable/baseline_corporate_fare_24"
        android:title="@string/majors" />

    <item
        android:id="@+id/faculty_admin_nav_teaching"
        android:icon="@drawable/baseline_assignment_ind_24"
        android:title="@string/teaching" />

    <item
        android:id="@+id/faculty_admin_nav_courses"
        android:icon="@drawable/baseline_library_books_24"
        android:title="@string/courses" />

    <item
        android:id="@+id/faculty_admin_nav_instructors"
        android:icon="@drawable/baseline_badge_24"
        android:title="@string/instructors" />

    <item
        android:id="@+id/faculty_admin_nav_chats"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/chats" />

    <item
        android:id="@+id/faculty_admin_nav_notifications"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifications" />

    <item
        android:id="@+id/faculty_admin_nav_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />

</menu>