<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24" />

    <item
        android:id="@+id/navCourses"
        android:title="@string/courses"
        android:icon="@drawable/baseline_library_books_24" />

    <item
        android:id="@+id/navChats"
        android:title="@string/chats"
        android:icon="@drawable/baseline_chat_24" />

    <item
        android:id="@+id/navNotifications"
        android:title="@string/notifications"
        android:icon="@drawable/baseline_notifications_24" />

    <item
        android:id="@+id/navProfile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_24" />

</menu>