<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_social"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/social" />

    <item
        android:id="@+id/nav_courses"
        android:icon="@drawable/baseline_library_books_24"
        android:title="@string/courses" />

    <item
        android:id="@+id/nav_chats"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/chats" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifications" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />

</menu>