<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="18dp">

    <AutoCompleteTextView
        android:id="@+id/autoScheduleDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/schedule_day_hint"
        android:inputType="none" />

    <EditText
        android:id="@+id/editScheduleStartTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/schedule_start_time_hint"
        android:focusable="false"
        android:clickable="true"
        android:cursorVisible="false"
        android:inputType="none" />

    <EditText
        android:id="@+id/editScheduleEndTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/schedule_end_time_hint"
        android:focusable="false"
        android:clickable="true"
        android:cursorVisible="false"
        android:inputType="none" />

    <EditText
        android:id="@+id/editScheduleRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/schedule_room_hint" />

</LinearLayout>